Add user management and icon generation scripts
Introduces user management settings page, user IPC handlers, and supporting types. Adds scripts for icon and template DB generation, and a template seed script for Prisma. Updates database initialization and seeding logic, and removes obsolete files including main entry points and finance handlers. Updates configuration and package files to reflect new features and structure.

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Electron</title>
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
+    <title>BizFlow - Business Management System</title>
+    <!-- CSP for Electron app -->
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:"
+      content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self';"
     />
   </head>
 
