fix windows build

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <title>BizFlow - Business Management System</title>
-    <!-- CSP for Electron app -->
-    <meta
+    <!-- CSP temporarily disabled for debugging -->
+    <!-- <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self';"
-    />
+      content="default-src 'self'; script-src 'self' 'unsafe-inline' blob:; style-src 'self' 'unsafe-inline' blob:; img-src 'self' data: https: blob:; font-src 'self' data: blob:; connect-src 'self' https: wss:;"
+    /> -->
   </head>
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+        <script type="module" crossorigin src="/src/main.tsx"></script>
   </body>
 </html>
