fix: Resolve Windows white screen issue
- Add base: './' to Vite renderer config for correct asset paths
- Temporarily disable CSP to allow ES modules loading
- Enable DevTools for debugging
- Add comprehensive logging for troubleshooting
- Add renderer process debugging logs

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <title>BizFlow - Business Management System</title>
-    <!-- CSP for Electron app -->
-    <meta
+    <!-- CSP temporarily disabled for debugging white screen issue -->
+    <!-- <meta
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self';"
-    />
+    /> -->
   </head>
 
   <body>
